@@ -3476,6 +3476,14 @@ that they are available here too.
   allowed here: ~--stat-width~, ~--stat-name-width~,
   ~--stat-graph-width~ and ~--compact-summary~.  Also see [[man:git-diff]]
 
+- User Option: magit-format-file-function ::
+
+  This function is used to format lines representing a file.  It is
+  used for file headings in diffs, in diffstats and for lists of files
+  (such as the untracked files).  Depending on the caller, it receives
+  either three or five arguments; the signature has to be ~(kind file
+  face &optional status orig)~.  KIND is one of ~diff~, ~stat~ and ~list~.
+
 *** Revision Buffer
 
 - User Option: magit-revision-insert-related-refs ::
