@@ -85,6 +85,9 @@
 (declare-function magit-smerge-keep-base "magit-apply" ())
 (declare-function magit-smerge-keep-lower "magit-apply" ())
 
+(declare-function all-the-icons-icon-for-file "ext:all-the-icons")
+(declare-function nerd-icons-icon-for-file "ext:nerd-icons")
+
 (eval-when-compile
   (cl-pushnew 'orig-rev eieio--known-slot-names)
   (cl-pushnew 'action-type eieio--known-slot-names)
@@ -321,6 +324,21 @@ and `--compact-summary'.  See the git-diff(1) manpage."
                 function
                 (list string)
                 (const :tag "None" nil)))
+
+(defcustom magit-format-file-function #'magit-format-file-default
+  "Function used to format lines representing a file.
+
+This function is used for file headings in diffs, in diffstats and for
+lists of files (such as the untracked files).  Depending on the caller,
+it receives either three or five arguments; the signature has to be
+(kind file face &optional status orig).  KIND is one of `diff', `stat'
+and `list'."
+  :package-version '(magit . "4.3.1")
+  :group 'magit-diff
+  :type `(choice (function-item ,#'magit-format-file-default)
+                 (function-item ,#'magit-format-file-all-the-icons)
+                 (function-item ,#'magit-format-file-nerd-icons)
+                 function))
 
 ;;;; File Diff
 
@@ -2310,8 +2328,9 @@ section or a child thereof."
                 (when (> le ld)
                   (setq sep (concat (make-string (- le ld) ?\s) sep))))
               (magit-insert-section (file (pop files))
-                (insert (propertize file 'font-lock-face 'magit-filename)
-                        sep cnt " ")
+                (insert (funcall magit-format-file-function
+                                 'stat file 'magit-filename))
+                (insert sep cnt " ")
                 (when add
                   (insert (propertize add 'font-lock-face
                                       'magit-diffstat-added)))
@@ -2462,11 +2481,9 @@ section or a child thereof."
         :source (and (not (equal orig file)) orig)
         :header header
         :binary binary)
-    (insert (propertize (format "%-10s %s" status
-                                (if (or (not orig) (equal orig file))
-                                    file
-                                  (format "%s -> %s" orig file)))
-                        'font-lock-face 'magit-diff-file-heading))
+    (insert (funcall magit-format-file-function
+                     'diff file 'magit-diff-file-heading status
+                     (and (not (equal orig file)) orig)))
     (cond ((and binary long-status)
            (insert (format " (%s, binary)" long-status)))
           ((or binary long-status)
@@ -2481,6 +2498,31 @@ section or a child thereof."
         (insert rename)
         (magit-insert-heading)))
     (magit-wash-sequence #'magit-diff-wash-hunk)))
+
+(defun magit-format-file-default (_kind file face &optional status orig)
+  (propertize (concat (and status (format "%-11s" status))
+                      (if orig (format "%s -> %s" orig file) file))
+              'font-lock-face face))
+
+(defun magit-format-file-all-the-icons (_kind file face &optional status orig)
+  (propertize
+   (concat (and status (format "%-11s" status))
+           (if orig
+               (format "%s %s -> %s %s"
+                       (all-the-icons-icon-for-file orig) orig
+                       (all-the-icons-icon-for-file file) file)
+             (format "%s %s" (all-the-icons-icon-for-file file) file)))
+   'font-lock-face face))
+
+(defun magit-format-file-nerd-icons (_kind file face &optional status orig)
+  (propertize
+   (concat (and status (format "%-11s" status))
+           (if orig
+               (format "%s %s -> %s %s"
+                       (nerd-icons-icon-for-file orig) orig
+                       (nerd-icons-icon-for-file file) file)
+             (format "%s %s" (nerd-icons-icon-for-file file) file)))
+   'font-lock-face face))
 
 (defun magit-diff-wash-submodule ()
   ;; See `show_submodule_summary' in submodule.c and "this" commit.
